--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
-
+<head>
+<title>Stacked chart of Ellis Island Immigration</title>
+<meta property="og:title" content="Stacked chart of Ellis Island Immigration" />
 <meta property="og:image" content="stacks.jpg" />
+</head>
 <style>
 
 body {
