--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <title>Stacked chart of Ellis Island Immigration</title>
 <meta property="og:title" content="Stacked chart of Ellis Island Immigration" />
 <meta property="og:image" content="stacks.jpg" />
+<meta content='https://github.com/hopperrr/ellis-stacked/blob/master/stacks.jpg' property='og:image'/>
 </head>
 <style>
 
